# phosphor-led-sysfs

./: add_led_action.cpp  controller.cpp  controller.hpp  meson.build  physical.hpp
interfaces/: internal_interface.cpp  internal_interface.hpp
